--- a/1.ABC.Rmd
+++ b/1.ABC.Rmd
@@ -443,7 +443,12 @@ From this moment, for convenience, we will start using the package `abc` that ha
 
 ### Exercise 9
 
-Using function `abc()` (from `abc` package), apply the rejection algorithm using one summary statistic. Start with the number of segregating sites and the number of haplotypes (`S`, `NH`), then try $\pi$ (`PI`). Explore the effect of changing the tolerance level (proportion of simulations kept), try values `0.5` and `0.001`. What would we get as posterior using tolerance values close to `1`?
+Using function `abc()` (from `abc` package), apply the rejection algorithm using one summary statistic:
+
+* Start with the number of segregating sites and the number of haplotypes (`S`). [use code provided]
+* Try now using $\pi$ (`PI`).
+* Explore the effect of changing the tolerance level (proportion of simulations kept), try values `0.5` and `0.001`. What would we get as posterior using tolerance values close to `1`?
+* Try with more than one summary statistic. How do you think the distance is being in this case?
 
 ```{r rejection_algortihm_tolerance, exercise=TRUE, exercise.lines=35}
 target    <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/target.RDS")
