added reference to learnr

--- a/references.bib
+++ b/references.bib
@@ -155,6 +155,15 @@
 
 
 
+  @Manual{Schloerke2020,
+    title = {learnr: Interactive Tutorials for R},
+    author = {Barret Schloerke and JJ Allaire and Barbara Borges},
+    year = {2020},
+    note = {R package version 0.10.1},
+    url = {https://CRAN.R-project.org/package=learnr},
+  }
+
+
 
 @misc{Stadler2009a,
 	title = {Sampling Version 0.5: Software for Simulating Haplotypes in Non-Equilibrium Subdivided Populations},
