clarification for corelation

--- a/4.Beyond.Rmd
+++ b/4.Beyond.Rmd
@@ -23,7 +23,7 @@ suppressMessages(library(weights, quietly=T))
 
 ## Latent variables
 
-A [latent variable](https://en.wikipedia.org/wiki/Latent_variable) is a variable of the model that is not directly observable, in opposition with variables that are observable (data). For instance, in the case of the coalescent model, the Time to the Most Recent Common Ancestor (TMRCA) is a random variable: each individual realization of the process with the same parameter values can have a different TMRCA. However, the TMRCA for real data is not observable. Some latent variables can be quantities of interest, so it can be useful to estimate them. Often, these latent variables have a strong impact on the data, so they have a higher correlation with them that some parameters. For instance, the correlation between $\theta$ and $\pi$ in the reference table  of the constant model is 0.87 while the correlation between TMRCA and $\pi$ is 0.95.
+A [latent variable](https://en.wikipedia.org/wiki/Latent_variable) is a variable of the model that is not directly observable, in opposition with variables that are observable (i.e. data). For instance, in the case of the coalescent model, the Time to the Most Recent Common Ancestor (TMRCA) is a random variable: each individual realization of the process with the same parameter values can have a different TMRCA. However, the TMRCA for real data is not observable. Some latent variables can be quantities of interest, so it can be useful to estimate them. Often, these latent variables have a strong impact on the data, so they have a higher correlation with them that some parameters. For instance, the correlation between $\theta$ and $\pi$ in the reference table  of the constant model is 0.87 while the correlation between TMRCA and $\pi$ is 0.95 (Pearson correlation coefficient using `cor()`).
 
 ### Exercise 1
 
