--- a/3.ClassicalABC.Rmd
+++ b/3.ClassicalABC.Rmd
@@ -186,22 +186,18 @@ tau    <- runif(num_of_sim,min=0,max=2)
 msout <- ms(nsam = sample_size,
             opt = "-t tbs -eN tbs tbs -T",
             tbs.matrix = cbind(theta0, tau/theta0, theta1/theta0))
-tmrca <- theta0*sapply(read.tree(text = msout[grep("//",msout)+1]),get.rooted.tree.height)
+tmrca <- theta0*sapply(read.tree(text = msout[grep("//",msout)+1]),
+                       get.rooted.tree.height)
 msout <- read.ms.output(txt=msout)
-S_prime  <- S(msout)
-PI_prime <- PI(msout)
-NH_prime <- NH(msout)
-TD_prime <- TajimaD(msout)
-FLD_prime <- FuLiD(msout)
 ref_table <- data.frame(theta0=theta0,
                         theta1=theta1,
                         tau=tau,
                         tmrca=tmrca,
-                        S=S_prime,
-                        PI=PI_prime,
-                        NH=NH_prime,
-                        TD=TD_prime,
-                        FLD=FLD_prime)
+                        S=S(msout),
+                        PI=PI(msout),
+                        NH=NH(msout),
+                        TD=TajimaD(msout),
+                        FLD=FuLiD(msout))
 saveRDS(ref_table,file="ref_table_2.RDS")
 ```
 
