--- a/3.ClassicalABC.Rmd
+++ b/3.ClassicalABC.Rmd
@@ -218,17 +218,15 @@ ref_table <- readRDS(file="/home/miguel/Work/Teaching/ABCRF tutorial/ref_table_2
 
 num_of_sims <- 10000
 
+# Principal Component Analysis
 PCA_result  <- princomp(ref_table[,c("S","PI","NH","TD","FLD")])
+pc<-c(1,2) 
+plot(PCA_result$scores[seq_len(num_of_sims),pc[1]],
+     PCA_result$scores[seq_len(num_of_sims),pc[2]],
+     xlab=paste("PCA",pc[1]),ylab=paste("PCA",pc[2]))
+# projection of target data
 PCA_target <- predict(PCA_result, target[,c("S","PI","NH","TD","FLD")])
-plot(PCA_result$scores[seq_len(num_of_sims),1],
-     PCA_result$scores[seq_len(num_of_sims),2],
-     xlab="PCA 1", ylab="PCA 2")
-points(PCA_target[,1], PCA_target[,2], col=c("yellow","orange"))
-
-plot(PCA_result$scores[seq_len(num_of_sims),3],
-     PCA_result$scores[seq_len(num_of_sims),4],
-     xlab="PCA 3", ylab="PCA 4")
-points(PCA_target[,3],PCA_target[,4], col=c("yellow","orange"))
+points(PCA_target[,pc[1]],PCA_target[,pc[2]],col=c("yellow","orange"))
 
 plot(ref_table$TD[seq_len(num_of_sims)],
      ref_table$FLD[seq_len(num_of_sims)],
@@ -236,7 +234,7 @@ plot(ref_table$TD[seq_len(num_of_sims)],
 points(target$TD, target$FLD, col=c("yellow","orange"))
 ```
 
-ABC model choice follows a similar process as parameter inference: references tables are pooled together and rejection step is applied to keep simulations closer to the observed data (based in summary statistics). The regression step is different, model is treated as a qualitative variable and thus a logistic regression is used to estimate posterior probabilities of the model. 
+ABC model choice follows a similar process as parameter inference: references tables are pooled together and rejection step is applied to keep simulations closer to the observed data (based in summary statistics). The regression step is different, model is treated as a qualitative variable and a logistic regression is used to estimate posterior probabilities of the model. 
 
 ### Exercise 4
 
