--- a/references.bib
+++ b/references.bib
@@ -44,6 +44,16 @@
 	year = {2010},
 	pages = {410--418}
 }
+
+  @Article{Csillery2012,
+    title = {abc: an R package for approximate Bayesian computation (ABC)},
+    author = {Katalin Csilléry and Olivier François and Michael G. B. Blum},
+    year = {2012},
+    journal = {Methods in Ecology and Evolution},
+    doi = {http://dx.doi.org/10.1111/j.2041-210X.2011.00179.x},
+  }
+
+
   
 @article{Diaconis2007,
   author = {Persi Diaconis and Susan Holmes and Richard Montgomery},
@@ -178,7 +188,7 @@
 	doi = {10.1534/genetics.108.094904},
 	number = {1},
 	journal = {Genetics},
-	author = {Städler, T. and Haubold, B. and Merino, C. and Stephan, W. and Pfaffelhuber, P.},
+	author = {Städler, Thomas and Haubold, Bernhard and Merino, Carlos and Stephan, Wolfgang and Pfaffelhuber, Peter},
 	year = {2009},
 	pages = {205--216}
 }
